2022.??.??
  * Improved scene detection for mixed season packs


2022.01.15
  * Improved scene detection for season packs
  * Attempt to fix screenshot creation on Windows
  * bB: Less common sources can now be selected manually
  * bB: With --only-description, include screenshots and mediainfo for season
    and episode release


2021.12.12
  * Fix adding torrents to rTorrent <= 0.9.6


2021.12.09
  * Fix detection of interlaced MBAFF/PAFF video
  * Fix searching SrrDB for release names containing ","
  * Fix " not found in regex" printed to stdout


2021.12.04
  * Renamed options trackers.*.(add|copy)-to to trackers.*.(add|copy)_to for
    consistency with other option names (sorry for the inconvenience)
  * Added support for qBittorrent, rTorrent and Deluge
  * Try to make non-unique TV show titles unique by appending 2-letter country
    code (ccTLD) or year
  * submit/torrent-create: Added --reuse-torrent/-t option to get piece hashes
    from an existing torrent instead of hashing all the content (this happens
    automatically when torrents are created with upsies)
  * Configuration options are now better documented (upsies set -h)
  * bB: Submit automatically generated screenshots and mediainfo when a custom
    description is given for a season or episode submission with --description
    (previously, the custom description needed to include screenshots and
    mediainfo)
  * bB: Normalize tags provided through --tags or entered in the TUI
  * Purge <script> tags from cached HTML (reduces size by ~40%)


2021.11.09
  * Removed debugging print()


2021.11.08
  * submit: CLI options have changed (see `upsies submit <TRACKER> -h`)
  * Re-use hashed pieces from previously generated torrents if possible
  * Fixed finding the latest release for update checking
  * bB: New --description option takes a custom description text or the path to
    a text file
  * bB: New --tags option takes a custom list of comma-separated tags