@@ -1,5 +1,6 @@
 2022.??.??
   * Improved scene detection for mixed season packs
+  * "upsies --help" provides basic documentation for keybindings
 
 
 2022.01.15
